@@ -97,7 +97,7 @@ view.
         [[doi:10.5555/1268708.1268753](https://dl.acm.org/doi/10.5555/1268708.1268753)],
         [[abstract:USENIX](https://www.usenix.org/conference/1999-usenix-annual-technical-conference/multilingual-vi-clones-past-now-and-future)]
         (*legacy*)
-  - No support for bidirectional text 
+  - No support for bidirectional text
   - No support for regional localization or message translation
 - Inefficient handling of extremely large (e.g. multi-GB) files
 - No support for syntax highlighting, context-aware code completion, code
@@ -148,7 +148,7 @@ view.
   - *AMD* **Optimizing C**/**C++** (*Linux*) V3+
   - *GNU* **GCC** (*AIX*, *BSD*, *Darwin*, *Linux*, *Windows*) V4.6+
   - *IBM* **Advance Toolchain** (*Linux on POWER*) V14.0+
-  - *IBM* **Open XL C**/**C++** (*AIX*) V17.1+ 
+  - *IBM* **Open XL C**/**C++** (*AIX*) V17.1+
   - *IBM* **XL C**/**C++** (*AIX*, *Linux*) V16.1+
   - *Intel* **oneAPI DPC++**/**C++** (*Linux*) V2021+
   - *Intel* **C Compiler Classic** (*Darwin*, *Linux*) V19.1+
